# excel_worker

./: .env.dev  .gitignore  Dockerfile  Makefile  README.md  alembic.ini  docker-compose.dev.yml  docker-compose.prod.yml  docker-compose.yml  main.py  poetry  pyproject.toml
.github/: copilot-instructions.md
exports/: medical_histories_20250923_112146.xlsx  medical_histories_20250923_112705.xlsx  medical_histories_20251120_103732.xlsx  medical_histories_20251204_084323.xlsx  medical_histories_20251204_084336.xlsx
migrations/: env.py
migrations/versions/: 193cbbec6ea8_2025_01_29_16_45_initial_migration.py  22aef59b6708_2025_07_31_06_41_correct_cax_name_string.py  301185d8499c_2025_09_26_09_21_add_operation_remove_.py  3ed1bd0e91ab_2025_07_31_08_02_add_unque_constraint_.py  4539bbcace4c_2025_07_30_14_54_correct_timezone_db.py  4abe1671df48_2025_10_09_08_02_delete_refined_.py  4e3d48bd42c1_2025_10_09_07_38_add_patient_table.py  4f6fe9245f0d_2025_07_31_08_55_change_adress_string.py  5026e292a802_2025_07_30_13_17_cax_correct.py  506d32185f71_2025_09_26_09_35_correct_operations.py  525f11b2c1f8_2025_12_03_15_22_delete_unique_opername.py  595e8196188d_2025_11_13_08_30_add_user_role_relation.py  662046b2e993_2025_07_31_06_34_add_medical_hystory_.py  67ad8395d339_2025_10_10_09_11_correct_adress.py  68013df97df0_2025_08_06_16_42_add_is_active_and_days_.py  c162faa26755_2025_09_26_09_23_add_operation.py  d1423d59e461_2025_07_31_07_36_change_history_number_.py  d3484eb9feba_2025_09_11_07_01_add_isactive_cax.py  e57b59ebd9a1_correct_address.py  ed33c9dfb737_2025_11_13_08_11_add_role.py
src/: app.py
src/api/: auth.py  cax_codes.py  discharge_date.py  doctor.py  excel.py  medical_history.py  medical_history_report.py  nurse.py  operations.py  oracle_get_generator.py  patient.py  roles.py  tasks.py  users.py
src/auth/: dependencies.py  utils.py
src/db/: base.py  config.py  oracle_db.py  seed.py
src/gui/: main_window.py
src/models/: __init__.py  cax_code.py  doctor.py  medical_hystory.py  nurse.py  operation.py  patient.py  role.py  user.py  user_role.py
(+30 files in other folders)
