[tool.poetry]
name = "excel-worker"
version = "0.1.0"
description = ""
authors = ["Dimetry537 <maksakov1988@gmail.com>"]
readme = "README.md"
packages = [
    { include = "src" }
]

[tool.poetry.dependencies]
python = "^3.10"
celery = "^5.4.0"
SQLAlchemy = "^2.0.37"
asyncpg = "^0.30.0"
python-dotenv = "^1.0.1"
alembic = "^1.14.1"
uvicorn = "^0.35.0"
fastapi = "^0.116.1"
pydantic = "^2.11.7"
starlette = "^0.47.2"
holidays = "^0.78"
oracledb = "^3.3.0"
libaio = "^0.9.3"
openpyxl = "^3.1.5"
flower = "^2.0.1"
redis = "^6.4.0"
python-docx = "^1.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
